[gd_scene load_steps=2 format=2]

[ext_resource path="res://demos/general/edbuffer.gd" type="Script" id=1]

[node name="edbuffer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="srv_panel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 270.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="srv_panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 133.0
margin_bottom = 34.0
text = "Single byte (0-255):"
valign = 1

[node name="sp_byte" type="SpinBox" parent="srv_panel"]
margin_left = 140.0
margin_top = 10.0
margin_right = 214.0
margin_bottom = 34.0
max_value = 255.0

[node name="chk_bool1" type="CheckBox" parent="srv_panel"]
margin_left = 10.0
margin_top = 44.0
margin_right = 102.0
margin_bottom = 68.0
text = "Boolean 1"

[node name="chk_bool2" type="CheckBox" parent="srv_panel"]
margin_left = 120.0
margin_top = 44.0
margin_right = 212.0
margin_bottom = 68.0
pressed = true
text = "Boolean 2"

[node name="Label2" type="Label" parent="srv_panel"]
margin_left = 10.0
margin_top = 80.0
margin_right = 105.0
margin_bottom = 104.0
text = "Integer, 32 bit:"
valign = 1

[node name="sp_int32" type="SpinBox" parent="srv_panel"]
margin_left = 110.0
margin_top = 80.0
margin_right = 249.0
margin_bottom = 104.0
min_value = -2.14748e+09
max_value = 2.14748e+09

[node name="Label11" type="Label" parent="srv_panel"]
margin_left = 10.0
margin_top = 110.0
margin_right = 105.0
margin_bottom = 134.0
text = "uint32"
valign = 1

[node name="txt_uint32" type="LineEdit" parent="srv_panel"]
margin_left = 110.0
margin_top = 110.0
margin_right = 250.0
margin_bottom = 134.0
text = "4294967295"

[node name="Label3" type="Label" parent="srv_panel"]
margin_left = 10.0
margin_top = 140.0
margin_right = 101.0
margin_bottom = 164.0
text = "Floating point:"
valign = 1

[node name="txt_float" type="LineEdit" parent="srv_panel"]
margin_left = 110.0
margin_top = 140.0
margin_right = 250.0
margin_bottom = 164.0
text = "123.456"

[node name="Label4" type="Label" parent="srv_panel"]
margin_left = 10.0
margin_top = 170.0
margin_right = 63.0
margin_bottom = 194.0
text = "Vector2:"
valign = 1

[node name="txt_vec2x" type="LineEdit" parent="srv_panel"]
margin_left = 80.0
margin_top = 170.0
margin_right = 160.0
margin_bottom = 194.0
text = "10"

[node name="txt_vec2y" type="LineEdit" parent="srv_panel"]
margin_left = 170.0
margin_top = 170.0
margin_right = 250.0
margin_bottom = 194.0
text = "20"

[node name="Label5" type="Label" parent="srv_panel"]
margin_left = 30.0
margin_top = 200.0
margin_right = 70.0
margin_bottom = 214.0
text = "Rect2:"

[node name="txt_rec2px" type="LineEdit" parent="srv_panel"]
margin_left = 80.0
margin_top = 220.0
margin_right = 160.0
margin_bottom = 244.0
text = "5"

[node name="txt_rec2py" type="LineEdit" parent="srv_panel"]
margin_left = 170.0
margin_top = 220.0
margin_right = 249.0
margin_bottom = 244.0
text = "10"

[node name="txt_rec2sx" type="LineEdit" parent="srv_panel"]
margin_left = 80.0
margin_top = 250.0
margin_right = 160.0
margin_bottom = 274.0
text = "40"

[node name="txt_rec2sy" type="LineEdit" parent="srv_panel"]
margin_left = 170.0
margin_top = 250.0
margin_right = 249.0
margin_bottom = 274.0
text = "50"

[node name="Label6" type="Label" parent="srv_panel"]
margin_left = 10.0
margin_top = 220.0
margin_right = 62.0
margin_bottom = 244.0
text = "Position"
valign = 1

[node name="Label7" type="Label" parent="srv_panel"]
margin_left = 10.0
margin_top = 250.0
margin_right = 40.0
margin_bottom = 274.0
text = "Size"
valign = 1

[node name="Label8" type="Label" parent="srv_panel"]
margin_left = 30.0
margin_top = 280.0
margin_right = 83.0
margin_bottom = 294.0
text = "Vector3:"

[node name="txt_vec3x" type="LineEdit" parent="srv_panel"]
margin_left = 10.0
margin_top = 300.0
margin_right = 83.0
margin_bottom = 324.0
text = "1.1"

[node name="txt_vec3y" type="LineEdit" parent="srv_panel"]
margin_left = 90.0
margin_top = 300.0
margin_right = 163.0
margin_bottom = 324.0
text = "2.2"

[node name="txt_vec3z" type="LineEdit" parent="srv_panel"]
margin_left = 170.0
margin_top = 300.0
margin_right = 243.0
margin_bottom = 324.0
text = "3.3"

[node name="Label9" type="Label" parent="srv_panel"]
margin_left = 30.0
margin_top = 330.0
margin_right = 102.0
margin_bottom = 344.0
text = "Quaternion"

[node name="txt_quatx" type="LineEdit" parent="srv_panel"]
margin_left = 50.0
margin_top = 350.0
margin_right = 123.0
margin_bottom = 374.0
text = "0"

[node name="txt_quaty" type="LineEdit" parent="srv_panel"]
margin_left = 130.0
margin_top = 350.0
margin_right = 203.0
margin_bottom = 374.0
text = "0"

[node name="txt_quatz" type="LineEdit" parent="srv_panel"]
margin_left = 50.0
margin_top = 374.0
margin_right = 123.0
margin_bottom = 398.0
text = "0"

[node name="txt_quatw" type="LineEdit" parent="srv_panel"]
margin_left = 130.0
margin_top = 374.0
margin_right = 203.0
margin_bottom = 398.0
text = "1"

[node name="Label10" type="Label" parent="srv_panel"]
margin_left = 30.0
margin_top = 410.0
margin_right = 70.0
margin_bottom = 424.0
text = "Color"

[node name="txt_colr" type="LineEdit" parent="srv_panel"]
margin_left = 50.0
margin_top = 428.0
margin_right = 123.0
margin_bottom = 452.0
text = "0.15"

[node name="txt_colg" type="LineEdit" parent="srv_panel"]
margin_left = 130.0
margin_top = 428.0
margin_right = 203.0
margin_bottom = 452.0
text = "0.25"

[node name="txt_colb" type="LineEdit" parent="srv_panel"]
margin_left = 50.0
margin_top = 452.0
margin_right = 123.0
margin_bottom = 476.0
text = "0.35"

[node name="txt_cola" type="LineEdit" parent="srv_panel"]
margin_left = 130.0
margin_top = 452.0
margin_right = 203.0
margin_bottom = 476.0
text = "1"

[node name="bt_test" type="Button" parent="srv_panel"]
margin_left = 170.0
margin_top = 548.0
margin_right = 249.0
margin_bottom = 568.0
text = "Test"

[node name="bt_back" type="Button" parent="srv_panel"]
margin_left = 10.0
margin_top = 548.0
margin_right = 89.0
margin_bottom = 568.0
text = "Back"

[node name="cl_panel" type="Panel" parent="."]
margin_left = 280.0
margin_top = 10.0
margin_right = 1010.0
margin_bottom = 590.0

[node name="lbl_var2bytes" type="Label" parent="cl_panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
text = "Using only var2bytes. Byte count = "

[node name="lbl_stripped" type="Label" parent="cl_panel"]
margin_left = 10.0
margin_top = 30.0
margin_right = 184.0
margin_bottom = 44.0
text = "EncDecBuffer. Byte count ="

[node name="Label" type="Label" parent="cl_panel"]
margin_left = 10.0
margin_top = 60.0
margin_right = 102.0
margin_bottom = 74.0
text = "Decoded data:"

[node name="txt_decoded" type="TextEdit" parent="cl_panel"]
margin_left = 10.0
margin_top = 80.0
margin_right = 320.0
margin_bottom = 560.0
readonly = true

[node name="Label2" type="Label" parent="cl_panel"]
margin_left = 340.0
margin_top = 10.0
margin_right = 400.0
margin_bottom = 24.0
text = "Raw data (bytes in hex):"

[node name="txt_raw" type="TextEdit" parent="cl_panel"]
margin_left = 340.0
margin_top = 28.0
margin_right = 710.0
margin_bottom = 240.0
readonly = true
wrap_enabled = true

[node name="Label3" type="Label" parent="cl_panel"]
margin_left = 340.0
margin_top = 250.0
margin_right = 428.0
margin_bottom = 264.0
text = "Compression:"

[node name="txt_compression" type="TextEdit" parent="cl_panel"]
margin_left = 340.0
margin_top = 270.0
margin_right = 710.0
margin_bottom = 560.0
readonly = true
[connection signal="pressed" from="srv_panel/bt_test" to="." method="_on_bt_test_pressed"]
[connection signal="pressed" from="srv_panel/bt_back" to="." method="_on_bt_back_pressed"]
